--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint:fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint-fix": "eslint --fix --ext .js --ext .vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
