--- a/package.json
+++ b/package.json
@@ -14,11 +14,21 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "koa": "^2.5.2",
     "element-ui": "^2.4.6",
-    "@nuxtjs/axios": "^5.0.0"
+    "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.1",
+    "koa-redis": "^3.1.3",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.3.12",
+    "node-mailer": "^0.1.1",
+    "nuxt": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
