--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
     "mongoose": "^5.3.12",
-    "node-mailer": "^0.1.1",
+    "nodemailer": "^4.7.0",
     "nuxt": "^2.0.0",
     "passport-local": "^1.0.0"
   },
