--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.0.0",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
